--- a/it_buy/Views/Emails/Thanhtoan.cshtml
+++ b/it_buy/Views/Emails/Thanhtoan.cshtml
@@ -32,7 +32,7 @@
                                         <tr>
                                             <td style="padding:10px;">@item.stt</td>
                                             <td style="padding:10px;">@item.tenhh</td>
-                                            <td style="padding:10px;">@item.soluong.ToString("#,##0")</td>
+                                            <td style="padding:10px;">@item.soluong.ToString("#,##0.##")</td>
                                             <td style="padding:10px;">@item.dvt</td>
                                             <td style="padding:10px;">@item.note</td>
                                         </tr>
