--- a/it_buy/frontend/src/assets/layout/styles/layout/_responsive.scss
+++ b/it_buy/frontend/src/assets/layout/styles/layout/_responsive.scss
@@ -98,3 +98,61 @@
         }
     }
 }
+
+.dt-responsive-table .ui-column-title{
+    display: none;
+}
+@media (max-width: 767px) {
+    .dt-responsive-table table {
+        width: 100% !important;
+    }
+
+    /* Styles for the table header */
+    .dt-responsive-table table thead {
+        display: none !important;
+        /* Hide the table header on mobile */
+    }
+
+    /* Styles for the table rows */
+    .dt-responsive-table table tbody {
+        display: flex !important;
+        flex-direction: column !important;
+        align-items: stretch !important;
+        min-height: auto !important;
+        /* Adjust the min-height as needed */
+    }
+
+    /* Styles for individual table rows (cards) */
+    .dt-responsive-table table tbody tr {
+        border: 1px solid #ccc !important;
+        border-radius: 8px !important;
+        margin-bottom: 1rem !important;
+        background-color: #fff !important;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1) !important;
+    }
+
+
+    /* Hide individual table rows (cards) on mobile */
+    .dt-responsive-table table tbody tr {
+        display: grid !important;
+    }
+
+    /* Set the display of table cells to be block-level elements */
+    .dt-responsive-table table tbody td {
+        display: block !important;
+        border-width: 0 0 1px 0;
+    }
+
+    .dt-responsive-table .ui-column-title {
+        padding: .4em;
+        width: 30%;
+        display: inline-block;
+        margin: -.4em 1em -.4em -.4em;
+    }
+
+    .dt-responsive-table .ui-column-data {
+        width: 70%;
+        display: inline-block;
+        text-wrap: pretty;
+    }
+}
