--- a/it_buy/Views/Emails/Danhgianhacungcap.cshtml
+++ b/it_buy/Views/Emails/Danhgianhacungcap.cshtml
@@ -17,8 +17,8 @@
                             <p style="text-align:left">Phòng Cung ứng xin thông báo đánh giá nhà cung cấp.</p>
                             <p style="text-align:left">Tên nguyên liệu: <b>@Model.data.tenhh</b></p>
                             <p style="text-align:left">Grade: <b>@Model.data.grade</b></p>
-                            <p style="text-align:left">Nhà sản xuất: <b>@Model.data.nhasanxuat?.tennsx</b></p>
-                            <p style="text-align:left">Nhà cung cấp: <b>@Model.data.nhacungcap?.tenncc</b></p>
+                            <p style="text-align:left">Nhà sản xuất: <b>@Model.data.nhasx</b></p>
+                            <p style="text-align:left">Nhà cung cấp: <b>@Model.data.nhacc</b></p>
                             <p>Đường dẫn:</p>
                             <p style="text-align:center;">
                                 <a href="@Model.link" style="padding: 10px 30px;
